media_module: control CAM throw mcu and used api to control mcu. [3/9]
PD#SWPL-10659

Problem:
not support control mcu by spi and rw cam card by spi mode.
not support ts3 port.

Solution:
1 add control mcu function and rw cam card api.
2 add ts3 port support.
3 add en50221 funtion for mcu mode.

Verify:
verified on t962x3-t312 box.

Change-Id: If87964cc26feed0145bb8ee8d57316c45f6342c2
Signed-off-by: hualing chen <hualing.chen@amlogic.com>

--- a/drivers/stream_input/parser/dvb_ci/Makefile
+++ b/drivers/stream_input/parser/dvb_ci/Makefile
@@ -1,8 +1,9 @@
 obj-m += ci.o cimax-usb.o
 
-ci-objs = $(amlci-objs) $(cimax-objs)
+ci-objs = $(amlci-objs) $(cimcu-objs) $(cimax-objs)
 
-amlci-objs = aml_pcmcia.o  aml_ci.o
+amlci-objs = aml_pcmcia.o  aml_ci.o aml_spi.o
+cimcu-objs = cimcu/dvb_ca_en50221_cimcu.o
 cimax-objs = cimax/dvb_ca_en50221_cimax.o cimax/aml_cimax.o  cimax/dvb_ringbuffer.o
 cimax-usb-objs += cimax/usb/SRC/cimax+usb-driver.o cimax/usb/SRC/cimax+usb_fw.o
 cimax-usb-objs += cimax/usb/SRC/cimax+usb_config.o
