demux: update 4.9 to 5.4 [1/1]
PD#SWPL-19089

Problem:
 support 5.4 kernel

Solution:
 update amlogic-4.9-dev code match with 5.4 kernel

Verify:
 verify at ac214

Change-Id: I3826523834cb6f5668fe99def3155a0b0b082fed
Signed-off-by: Chuangcheng Peng <chuangcheng.peng@amlogic.com>

--- a/drivers/stream_input/parser/demux/Makefile
+++ b/drivers/stream_input/parser/demux/Makefile
@@ -1,6 +1,6 @@
 obj-m	+= aml_swdmx.o
 
-ccflags-y += -I$(srctree)/drivers/media/dvb-core -I$(srctree)/drivers/gpio -I$(srctree)/include
+ccflags-y += -I$(srctree)/include/media -I$(srctree)/drivers/media/pci/ttpci -I$(srctree)/drivers/gpio -I$(srctree)/include
 
 aml_swdmx-objs += aml_dvb.o
 aml_swdmx-objs += aml_dsc.o
