--- a/drivers/stream_input/parser/dvb_ci/Makefile
+++ b/drivers/stream_input/parser/dvb_ci/Makefile
@@ -5,6 +5,7 @@ ci-objs = $(amlci-objs) $(cimcu-objs) $(cimax-objs)
 amlci-objs = aml_pcmcia.o  aml_ci.o aml_spi.o
 cimcu-objs = cimcu/dvb_ca_en50221_cimcu.o
 cimax-objs = cimax/dvb_ca_en50221_cimax.o cimax/aml_cimax.o  cimax/dvb_ringbuffer.o
+KBUILD_CFLAGS += -Wno-implicit-fallthrough
 cimax-usb-objs += cimax/usb/SRC/cimax+usb-driver.o cimax/usb/SRC/cimax+usb_fw.o
 cimax-usb-objs += cimax/usb/SRC/cimax+usb_config.o
 cimax-objs += cimax/aml_cimax_usb.o
@@ -13,4 +14,6 @@ ccflags-y += -I$(srctree)/
 ccflags-y += -I$(srctree)/include
 ccflags-y += -I$(srctree)/drivers/gpio
 ccflags-y += -I$(srctree)/drivers/media/dvb-core
+ccflags-y += -I$(srctree)/include/media
+ccflags-y += -I$(srctree)/drivers/media/pci/ttpci
 
