--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -2,4 +2,4 @@ obj-y	+=	common/
 obj-y	+=	frame_provider/
 obj-y	+=	frame_sink/
 obj-y	+=	stream_input/
-obj-y	+=	amvdec_ports/
+#obj-y	+=	amvdec_ports/
