media_modules: add jpeg encoder [1/1]
PD#SWPL-18749

Problem:
tm2 needs hw jpeg encoder

Solution:
porting jpeg encoder driver

Verify:
verified on t962x3 ab301

Change-Id: I8c0d537c44cd7e9589b8d78d9647b7a74186af39
Signed-off-by: Rico Yang <wei.yang@amlogic.com>

--- a/drivers/frame_sink/encoder/Makefile
+++ b/drivers/frame_sink/encoder/Makefile
@@ -1,2 +1,3 @@
 obj-$(CONFIG_AMLOGIC_MEDIA_VENC_H264)	+=	h264/
 obj-$(CONFIG_AMLOGIC_MEDIA_VENC_H265)	+=	h265/
+obj-$(CONFIG_AMLOGIC_MEDIA_VENC_JPEG)	+=	jpeg/
