--- a/drivers/amvdec_ports/Makefile
+++ b/drivers/amvdec_ports/Makefile
@@ -11,6 +11,7 @@ amvdec_ports-objs += decoder/vdec_vp9_if.o
 amvdec_ports-objs += decoder/vdec_mpeg12_if.o
 amvdec_ports-objs += decoder/vdec_mpeg4_if.o
 amvdec_ports-objs += decoder/vdec_mjpeg_if.o
+ifdef CONFIG_AMLOGIC_MEDIA_V4L_SOFTWARE_PARSER
 amvdec_ports-objs += decoder/aml_h264_parser.o
 amvdec_ports-objs += decoder/aml_hevc_parser.o
 amvdec_ports-objs += decoder/aml_vp9_parser.o
@@ -18,4 +19,5 @@ amvdec_ports-objs += decoder/aml_mpeg12_parser.o
 amvdec_ports-objs += decoder/aml_mpeg4_parser.o
 amvdec_ports-objs += decoder/aml_mjpeg_parser.o
 amvdec_ports-objs += utils/golomb.o
+endif
 amvdec_ports-objs += utils/common.o
