--- a/drivers/amvdec_ports/Makefile
+++ b/drivers/amvdec_ports/Makefile
@@ -4,6 +4,7 @@ amvdec_ports-objs += aml_vcodec_dec.o
 amvdec_ports-objs += aml_vcodec_util.o
 amvdec_ports-objs += aml_vcodec_adapt.o
 amvdec_ports-objs += aml_vcodec_vfm.o
+#amvdec_ports-objs += aml_vcodec_vpp.o
 amvdec_ports-objs += vdec_drv_if.o
 amvdec_ports-objs += decoder/vdec_h264_if.o
 amvdec_ports-objs += decoder/vdec_hevc_if.o
@@ -11,6 +12,7 @@ amvdec_ports-objs += decoder/vdec_vp9_if.o
 amvdec_ports-objs += decoder/vdec_mpeg12_if.o
 amvdec_ports-objs += decoder/vdec_mpeg4_if.o
 amvdec_ports-objs += decoder/vdec_mjpeg_if.o
+ifdef CONFIG_AMLOGIC_MEDIA_V4L_SOFTWARE_PARSER
 amvdec_ports-objs += decoder/aml_h264_parser.o
 amvdec_ports-objs += decoder/aml_hevc_parser.o
 amvdec_ports-objs += decoder/aml_vp9_parser.o
@@ -18,4 +20,5 @@ amvdec_ports-objs += decoder/aml_mpeg12_parser.o
 amvdec_ports-objs += decoder/aml_mpeg4_parser.o
 amvdec_ports-objs += decoder/aml_mjpeg_parser.o
 amvdec_ports-objs += utils/golomb.o
+endif
 amvdec_ports-objs += utils/common.o
