--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -2,4 +2,6 @@ obj-y	+=	common/
 obj-y	+=	frame_provider/
 obj-y	+=	frame_sink/
 obj-y	+=	stream_input/
+obj-y	+=	amvdec_ports/
+obj-y	+=	framerate_adapter/
 obj-$(CONFIG_AMLOGIC_MEDIA_V4L_DEC)	+=	amvdec_ports/
