--- a/drivers/stream_input/Makefile
+++ b/drivers/stream_input/Makefile
@@ -13,10 +13,10 @@ stream_input-objs	+=	parser/psparser.o
 stream_input-objs	+=	parser/rmparser.o
 stream_input-objs	+=	subtitle/subtitle.o
 
-#stream_input-objs	+=	parser/dvb_common.o
-#obj-$(CONFIG_AMLOGIC_DVB)   += parser/hw_demux/
-#obj-$(CONFIG_AMLOGIC_DVB)   += parser/demux/
-#obj-$(CONFIG_AMLOGIC_DVB)   += parser/dvb_ci/
+stream_input-objs	+=	parser/dvb_common.o
+obj-$(CONFIG_AMLOGIC_DVB)   += parser/hw_demux/
+obj-$(CONFIG_AMLOGIC_DVB)   += parser/demux/
+obj-$(CONFIG_AMLOGIC_DVB)   += parser/dvb_ci/
 
 ccflags-y += -I.
 ccflags-y += -I$(srctree)/include/media
