--- a/drivers/frame_provider/decoder/utils/Makefile
+++ b/drivers/frame_provider/decoder/utils/Makefile
@@ -7,4 +7,5 @@ decoder_common-objs	+=	frame_check.o amlogic_fbc_hook.o
 decoder_common-objs	+=	vdec_v4l2_buffer_ops.o
 decoder_common-objs	+=	vdec_sync.o
 decoder_common-objs	+=	vdec_power_ctrl.o
+decoder_common-objs	+=	vdec_feature.o
 
