ptserver: CF1 Realize the function of multi-channel pts server dirver  [2/5]
PD#SWPL-66307

Problem:
Need support multi-channel ptsserver driver.

Solution:
Add multi-channel ptsserver driver function.

Verify:
SC2

Change-Id: I4522f9c1633dd6257f31e12ca6b881ca0280c9ec
Signed-off-by: yunmin.chen <yunmin.chen@amlogic.com>

--- a/drivers/media_sync/Makefile
+++ b/drivers/media_sync/Makefile
@@ -1,4 +1,2 @@
-obj-m	+=	 media_sync.o
-
-media_sync-objs	+=	media_sync_dev.o
-media_sync-objs	+=	media_sync_core.o
+obj-y	+=	av_sync/
+obj-y	+=	pts_server/
