v4l: CF2 supports multi-inst tracing. [1/1]
PD#SWPL-99140

Problem:
Optimize V4L2 trace to support multi channel

Solution:
1. v4ldec supports multi-inst tracing.
2. adds extend ctrl for get vdec id.

Verify:
ohm

Change-Id: Ief357327cafc98ef952c5f819f47b90f6e353ac0
Signed-off-by: Nanxin Qin <nanxin.qin@amlogic.com>

--- a/drivers/amvdec_ports/Makefile
+++ b/drivers/amvdec_ports/Makefile
@@ -26,3 +26,4 @@ amvdec_ports-objs += decoder/aml_mjpeg_parser.o
 amvdec_ports-objs += utils/golomb.o
 endif
 amvdec_ports-objs += utils/common.o
+amvdec_ports-objs += utils/aml_dec_trace.o
